Fix to JabRef preview formatting

--- a/jabref-preview-formatting.html
+++ b/jabref-preview-formatting.html
@@ -11,10 +11,9 @@
   </b>
     <code><font size=4>[\bibtexkey]</font></code>
   <br>
-  <!-- The file name. -->
+  <!-- The file name, excluding extension. -->
   \begin{file}
-  <br>
-  <code><font size=4>
+  <code><font size=3>
     \format[FileLink(pdf), Replace(\.pdf$,)]{\file}
   </font></code>
   <br>
